ændret footer background

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,9 @@ import "../css/general.css";
 
 <section>
   <div class="flex">
-    <a href="/"><h4>#index</h4></a>
-    <a href="/projects"><h4>#latest projects</h4></a>
-    <a href="/about"><h4>#about</h4></a>
+    <a href="#about"><h4>#about</h4></a>
+    <a href="#wid"><h4>#what i do</h4></a>
+    <a href="#connect"><h4>#connect</h4></a>
   </div>
   <h2>&copy;joris ten voorde</h2>
 </section>
@@ -57,10 +57,6 @@ import "../css/general.css";
   }
   h4 {
     color: var(--accent2);
-  }
-
-  .arrow {
-    color: var(--primary);
   }
 
   @media (min-width: 900px) {
