--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@ import "../css/general.css";
 import "../css/animation.css";
 ---
 
-<section class="flow">
+<section class="flow content">
   <h1 id="about">about</h1>
   <div class="wrapper grid2-3 flow-mobile">
     <div class="profilepic">
