--- a/src/components/Connect.astro
+++ b/src/components/Connect.astro
@@ -2,16 +2,17 @@
 
 ---
 
-<section id="">
+<section class="content">
   <div id="connect" class="header-wrapper grid3-1">
     <h1>connect_with_me</h1>
-  </div>
+  </div><h6>#LET ME KNOW!</h6>
   <div class="grid1-1">
-    <div class="txt-wrapper">
-      <h6>#LET ME KNOW!</h6>
+    <div class="txt-wrapper flow-light">
       <p>I hope to find a great match with a company that expects a fresh and fun intern. I am ready to learn and explore this industry through the eyes of a professional.</p>
+      <p>What I seek in an internship is to get hands on with practical work on developing websites, and produce solutions. I want to work in a team that has experience and is open minded, and is ready to get hands-on with clients.</p>
     </div>
-    <div class="link-wrapper">
+    <div class="txt-wrapper">
+      <p>I tend to learn through iterations and trying, but what really makes it work for me, is being part of a team. Working completely solo usually makes me get stuck.</p>
       <h6>#LINKS</h6>
       <ul class="">
         <li>
