--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import HeroArea from "../components/HeroArea.astro";
 import Wid from "../components/Wid.astro";
 ---
 
-<MainLayout display="<PROFILE>" pagetitle="Index">
+<MainLayout display="<PROFILE>" pagetitle="Joris ten Voorde">
   <HeroArea id="index" />
 
   <About id="about" />
