lavet flow og mobile-flow consistent i alle sections

--- a/src/components/Connect.astro
+++ b/src/components/Connect.astro
@@ -2,12 +2,14 @@
 
 ---
 
-<section class="content">
+<section class="content flow flow-mobile">
   <div id="connect" class="header-wrapper grid3-1">
     <h1>connect_with_me</h1>
-  </div><h6>#LET ME KNOW!</h6>
+  </div>
+
   <div class="grid1-1">
     <div class="txt-wrapper flow-light">
+      <h2>#LET ME KNOW!</h2>
       <p>I hope to find a great match with a company that expects a fresh and fun intern. I am ready to learn and explore this industry through the eyes of a professional.</p>
       <p>What I seek in an internship is to get hands on with practical work on developing websites, and produce solutions. I want to work in a team that has experience and is open minded, and is ready to get hands-on with clients.</p>
     </div>
