givet dsplay text ny font. og undertitel h2

--- a/src/components/HeroArea.astro
+++ b/src/components/HeroArea.astro
@@ -4,11 +4,11 @@ import "../css/animation.css";
 
 <!-- <h1 class="display">profile</h1> -->
 <section>
-  <h1 class="">joris_ten<br />_voorde</h1>
+  <h1 class="display">joris_ten<br />_voorde</h1>
 
   <div class="grid2-1">
     <div class="box1">
-      <h5>frontend development student</h5>
+      <h2>frontend development student</h2>
       <div class="links">
         <a href="#about">#ABOUT</a>
         <a href="#wid">#WHAT_I_DO</a>
@@ -23,19 +23,15 @@ import "../css/animation.css";
     </div>
   </div>
   <style>
-    .display {
-      transform: translateY(-10vh) translateX(-45%) rotate(-90deg);
-      z-index: 10;
-    }
     section {
-      padding-top: var(--space-l);
+      padding-top: var(--space-s);
       position: relative;
 
       h1 {
         /* text-align: center; */
-        padding-left: var(--space-2xl);
+        /* padding-left: var(--space-2xl); */
         /* padding-right: var(--space-xl); */
-        -webkit-text-stroke: var(--secondary) 4px;
+        -webkit-text-stroke: var(--secondary) 2px;
       }
     }
 
@@ -56,7 +52,7 @@ import "../css/animation.css";
     .box1 {
       background: var(--gradient3);
 
-      h5 {
+      h2 {
         text-align: right;
         margin-top: 0;
         color: var(--accent2);
