--- a/src/css/general.css
+++ b/src/css/general.css
@@ -55,6 +55,7 @@ html {
   --step-4: clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem);
   --step-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem);
   --step-6: clamp(3.3592rem, 2.8691rem + 2.4507vw, 4.7684rem);
+  --step-7: clamp(3.3592rem, 2.8691rem + 6.4507vw, 6.7684rem);
 
   /* spacing */
   --space-3xs: clamp(0.3125rem, -0.0136rem + 1.6304vw, 1.25rem);
@@ -70,7 +71,7 @@ html {
 
 .display {
   font-family: "STRETCH SANS";
-  font-size: 96px;
+  font-size: var(--step-7);
   text-transform: uppercase;
   -webkit-text-stroke: var(--accent2) 4px;
   color: transparent;
