--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -72,7 +72,9 @@ import "../css/animation.css";
         }
       }
     }
-
+    .ff-container {
+      display: none;
+    }
     .wrapper {
       gap: var(--space-2xs);
     }
