--- a/src/components/Connect.astro
+++ b/src/components/Connect.astro
@@ -54,7 +54,13 @@
       gap: var(--space-2xs);
     }
     ul > * {
-      padding-bottom: var(--space-2xs);
+      font-family: "Work Sans", sans-serif;
+      font-size: var(--step-0);
+      font-weight: 700;
+      color: var(--accent2);
+      text-transform: uppercase;
+
+      margin-bottom: var(--space-2xs);
       &:last-child {
         padding-bottom: var(--space-s);
       }
