ændret links hover color

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -152,7 +152,7 @@ a {
 }
 a:hover,
 a::selection {
-  color: var(--secondary);
+  color: var(--tertiary);
   transition: var(--hover);
 }
 a:active {
