ændret titel til relevante links, tilføjet undertitel i WID for case

--- a/src/components/Wid.astro
+++ b/src/components/Wid.astro
@@ -8,6 +8,7 @@
   <div class="grid2-3">
     <div class="txt1 flow-light">
       <h2>#Recent projects</h2>
+      <h6>#Jesper Kongshaug Case</h6>
       <p>I have done a couple projects, that have heavely relied on designing a new interface. The latest of which was my exam for the 2nd semester. In a group of 4, we <a target="_blank" href="https://jesperkongshaug.netlify.app/"> completely redesigned&#8599;</a> the <a target="_blank" href="https://www.jesperkongshaug.com/"> current website&#8599;</a> of Jesper Kongshaug, giving it a new identity and implementing components on his request. This was developed using frameworks, a database and usertesting.</p>
       <p>During this project, my task was to manage the team, and assign tasks and keep contact with guidance and our client.</p>
     </div>
