--- a/src/components/Connect.astro
+++ b/src/components/Connect.astro
@@ -15,13 +15,13 @@
     </div>
     <div class="txt-wrapper">
       <p>I tend to learn through iterations and trying, but what really makes it work for me, is being part of a team. Working completely solo usually makes me get stuck.</p>
-      <h6>#LINKS</h6>
+      <h6>#RELEVANT LINKS</h6>
       <ul class="">
         <li>
-          <a target="_blank" href="https://github.com/snotbroder">GITHUB ACCOUNT</a>
+          <a target="_blank" href="https://github.com/snotbroder">Github Account</a>
         </li>
         <li>
-          <a target="_blank" href="https://github.com/snotbroder/profilesite">THIS GITHUB REP.</a>
+          <a target="_blank" href="https://github.com/snotbroder/profilesite">THIS GITHUB REPO.</a>
         </li>
         <li>
           <a target="_blank" href="https://linkedin.com/in/joris-ten-voorde-266678202">MESSAGE ME ON LINKEDIN</a>
@@ -54,6 +54,7 @@
       gap: var(--space-2xs);
     }
     ul > * {
+      list-style-type: square;
       font-family: "Work Sans", sans-serif;
       font-size: var(--step-0);
       font-weight: 700;
