tilføjet ny text til bar animation. tilføjet nye star svg

--- a/src/components/HeroArea.astro
+++ b/src/components/HeroArea.astro
@@ -19,10 +19,10 @@ import "../css/animation.css";
       <div class="frontgradient"></div>
       <div class="animcontent">
         <div class="lr-anim bar">LOOKING FOR INTERNSHIP</div>
-        <div class="rl-anim bar">LOOKING FOR INTERNSHIP</div>
+        <div class="rl-anim bar">FRONTEND DEVELOPMENT STUDENT</div>
         <div class="rl-anim delay1 bar">LOOKING FOR INTERNSHIP</div>
         <div class="lr-anim-slow bar">LOOKING FOR INTERNSHIP</div>
-        <div class="rl-anim-slow delay2 bar">LOOKING FOR INTERNSHIP</div>
+        <div class="rl-anim-slow delay2 bar">JS / CSS / FIGMA / ASTRO / REACT.JS</div>
       </div>
     </div>
   </div>
