tilføjet nye stjerner

--- a/src/components/HeroArea.astro
+++ b/src/components/HeroArea.astro
@@ -125,7 +125,10 @@ import "../css/animation.css";
         }
       }
     }
-    @media (min-width: 900px) {
+    @media (max-width: 900px) {
+      .box2 {
+        display: none;
+      }
     }
   </style>
 </section>
