--- a/src/components/Connect.astro
+++ b/src/components/Connect.astro
@@ -3,33 +3,35 @@
 ---
 
 <section class="content flow flow-mobile">
-  <div id="connect" class="header-wrapper grid3-1">
-    <h1>connect_with_me</h1>
-  </div>
-
-  <div class="grid1-1">
-    <div class="txt-wrapper flow-light">
-      <h2>#LET ME KNOW!</h2>
-      <p>I hope to find a great match with a company that expects a fresh and fun intern. I am ready to learn and explore this industry through the eyes of a professional.</p>
-      <p>What I seek in an internship is to get hands on with practical work on developing websites, and produce solutions. I want to work in a team that has experience and is open minded, and is ready to get hands-on with clients.</p>
+  <div class="content-grid">
+    <div id="connect" class="header-wrapper grid3-1">
+      <h1>connect_with_me</h1>
     </div>
-    <div class="txt-wrapper">
-      <p>I tend to learn through iterations and trying, but what really makes it work for me, is being part of a team. Working completely solo usually makes me get stuck.</p>
-      <h6>#RELEVANT LINKS</h6>
-      <ul class="">
-        <li>
-          <a target="_blank" href="https://github.com/snotbroder">Github Account</a>
-        </li>
-        <li>
-          <a target="_blank" href="https://github.com/snotbroder/profilesite">THIS GITHUB REPO.</a>
-        </li>
-        <li>
-          <a target="_blank" href="https://linkedin.com/in/joris-ten-voorde-266678202">MESSAGE ME ON LINKEDIN</a>
-        </li>
-        <li>
-          <a target="_blank" href="mailto:jote0002@stud.kea.dk">EMAIL ME</a>
-        </li>
-      </ul>
+
+    <div class="grid1-1">
+      <div class="txt-wrapper flow-light">
+        <h2>#LET ME KNOW!</h2>
+        <p>I hope to find a great match with a company that expects a fresh and fun intern. I am ready to learn and explore this industry through the eyes of a professional.</p>
+        <p>What I seek in an internship is to get hands on with practical work on developing websites, and produce solutions. I want to work in a team that has experience and is open minded, and is ready to get hands-on with clients.</p>
+      </div>
+      <div class="txt-wrapper">
+        <p>I tend to learn through iterations and trying, but what really makes it work for me, is being part of a team. Working completely solo usually makes me get stuck.</p>
+        <h6>#RELEVANT LINKS</h6>
+        <ul class="">
+          <li>
+            <a target="_blank" href="https://github.com/snotbroder">Github Account</a>
+          </li>
+          <li>
+            <a target="_blank" href="https://github.com/snotbroder/profilesite">THIS GITHUB REPO.</a>
+          </li>
+          <li>
+            <a target="_blank" href="https://linkedin.com/in/joris-ten-voorde-266678202">MESSAGE ME ON LINKEDIN</a>
+          </li>
+          <li>
+            <a target="_blank" href="mailto:jote0002@stud.kea.dk">EMAIL ME</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
