--- a/src/components/Wid.astro
+++ b/src/components/Wid.astro
@@ -3,53 +3,55 @@
 ---
 
 <section class="content flow flow-mobile">
-  <h1 id="wid">what_i_do</h1>
+  <div class="content-grid">
+    <h1 id="wid">what_i_do</h1>
 
-  <div class="grid2-3">
-    <div class="txt1 flow-light">
-      <h2>#Recent projects</h2>
-      <h6>#Jesper Kongshaug Case</h6>
-      <p>I have done a couple projects, that have heavely relied on designing a new interface. The latest of which was my exam for the 2nd semester. In a group of 4, we <a target="_blank" href="https://jesperkongshaug.netlify.app/"> completely redesigned&#8599;</a> the <a target="_blank" href="https://www.jesperkongshaug.com/"> current website&#8599;</a> of Jesper Kongshaug, giving it a new identity and implementing components on his request. This was developed using frameworks, a database and usertesting.</p>
+    <div class="grid2-3">
+      <div class="txt1 flow-light">
+        <h2>#Recent projects</h2>
+        <h6>#Jesper Kongshaug Case</h6>
+        <p>I have done a couple projects, that have heavely relied on designing a new interface. The latest of which was my exam for the 2nd semester. In a group of 4, we <a target="_blank" href="https://jesperkongshaug.netlify.app/"> completely redesigned&#8599;</a> the <a target="_blank" href="https://www.jesperkongshaug.com/"> current website&#8599;</a> of Jesper Kongshaug, giving it a new identity and implementing components on his request. This was developed using frameworks, a database and usertesting.</p>
+      </div>
+      <div class="txt2 flow-light">
+        <p>During this project, my task was to manage the team, and assign tasks and keep contact with guidance and our client.</p>
+        <p>Furthermore, for my individual exam, <a target="_blank" href="https://lightingdesign.netlify.app/">i did some tweaking&#8599;</a> to the group solution. Implementing the main content to a single page, and made small but noticeable designtweaks.</p>
+        <p>And, now the summer has passed, I already see flaws and room for improvement in this design - such as more consistent spacing, or more dynamic transitions between viewports. But this is the stuff I learn through iterations.</p>
+      </div>
     </div>
-    <div class="txt2 flow-light">
-      <p>During this project, my task was to manage the team, and assign tasks and keep contact with guidance and our client.</p>
-      <p>Furthermore, for my individual exam, <a target="_blank" href="https://lightingdesign.netlify.app/">i did some tweaking&#8599;</a> to the group solution. Implementing the main content to a single page, and made small but noticeable designtweaks.</p>
-      <p>And, now the summer has passed, I already see flaws and room for improvement in this design - such as more consistent spacing, or more dynamic transitions between viewports. But this is the stuff I learn through iterations.</p>
+    <div class="grid1-1">
+      <figure>
+        <img class="media" src="/kongshaug1.webp" alt="website before our solution" />
+        <span>Current solution</span>
+      </figure>
+      <figure>
+        <img class="media" src="/kongshaug2.webp" alt="website after our solution" />
+        <span>Our solution</span>
+      </figure>
     </div>
-  </div>
-  <div class="grid1-1">
-    <figure>
-      <img class="media" src="/kongshaug1.webp" alt="website before our solution" />
-      <span>Current solution</span>
-    </figure>
-    <figure>
-      <img class="media" src="/kongshaug2.webp" alt="website after our solution" />
-      <span>Our solution</span>
-    </figure>
-  </div>
-  <div class="grid2-3">
-    <table class="languages">
-      <tr>
-        <th>Languages</th>
-        <th></th>
-      </tr>
-      <tr> <td>DANSK (Modersmål)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
-      <tr> <td>NEDERLANDS (Belangrijk!)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
-      <tr> <td>ENGLISH (Also important)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
-      <tr> <td>DEUTCH (Natürlich)</td><td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_half.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /></td> </tr>
-      <tr> <td>ESPAñOL (Vale)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /></td></tr>
-    </table>
+    <div class="grid2-3">
+      <table class="languages">
+        <tr>
+          <th>Languages</th>
+          <th></th>
+        </tr>
+        <tr> <td>DANSK (Modersmål)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
+        <tr> <td>NEDERLANDS (Belangrijk!)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
+        <tr> <td>ENGLISH (Also important)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
+        <tr> <td>DEUTCH (Natürlich)</td><td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_half.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /></td> </tr>
+        <tr> <td>ESPAñOL (Vale)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /></td></tr>
+      </table>
 
-    <div class="table-wrapper">
-      <table>
-        <tr><th>code</th><td>HTML</td><td>CSS</td><td>JS</td></tr>
-        <tr><th>frameworks</th><td>React.JS</td><td>Astro</td><td></td></tr>
-        <tr><th>tools</th><td>figma</td><td>Illustrator</td><td>GIT</td></tr>
-      </table>
-      <table>
-        <tr><th>strenghts</th><td>translating design</td><td>detail oriented</td><td>working in teams</td></tr>
-        <tr><th>weakness</th><td>combat video games</td><td>content creation</td><td>image editing</td></tr>
-      </table>
+      <div class="table-wrapper">
+        <table>
+          <tr><th>code</th><td>HTML</td><td>CSS</td><td>JS</td></tr>
+          <tr><th>frameworks</th><td>React.JS</td><td>Astro</td><td></td></tr>
+          <tr><th>tools</th><td>figma</td><td>Illustrator</td><td>GIT</td></tr>
+        </table>
+        <table>
+          <tr><th>strenghts</th><td>translating design</td><td>detail oriented</td><td>working in teams</td></tr>
+          <tr><th>weakness</th><td>combat video games</td><td>content creation</td><td>image editing</td></tr>
+        </table>
+      </div>
     </div>
   </div>
 </section>
