--- a/src/css/general.css
+++ b/src/css/general.css
@@ -242,4 +242,10 @@ p,
     display: grid;
     grid-template-columns: 3fr 1fr;
   }
+
+  .content-grid {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 70rem;
+  }
 }
